--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Colmar Academy</title>
+    <link rel='stylesheet' type='text/css' href='resources/css/reset.css'>
+    <link rel='stylesheet' type='text/css' href='resources/css/style.css'>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
+  </head>
 
-<head>
-  <title>Colmar Academy</title>
-  <link rel='stylesheet' type='text/css' href='resources/css/reset.css'>
-  <link rel='stylesheet' type='text/css' href='resources/css/style.css'>
-</head>
 <body>
+  <div class="menu">
+    <div class="brand">
+      <div id="logo">
+      </div>
+      <div id="title">
+      </div>
+    </div>
+    <div class="navigation">
+      <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+      </ul>
+    </div>
+  </div>
 
 </body>
