flexed menu bar - company name

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div id="logo">
       </div>
       <div id="title">
+        <strong>COLMAR</strong>ACADAMY
       </div>
     </div>
     <div class="navigation">
