flexed nav section of menu

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
       <div id="logo">
       </div>
       <div id="title">
-        <strong>COLMAR</strong>ACADAMY
+        <span><b>COLMAR</b><span>
+        <span>ACADAMY</span>
       </div>
     </div>
     <div class="navigation">
       <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
+        <li>On Campus</li>
+        <li>Online</li>
+        <li>For Companies</li>
+        <li>Sign In</li>
       </ul>
     </div>
   </div>
