--- a/index.html
+++ b/index.html
@@ -8,22 +8,25 @@
   </head>
 
 <body>
-  <div class="menu">
-    <div class="brand">
-      <div id="logo">
+  <div class="container">
+    <div class="menu">
+      <div class="brand">
+        <div id="logo">
+          <img src="" alt="">
+        </div>
+        <div id="title">
+          <span><b>COLMAR</b><span>
+          <span>ACADAMY</span>
+        </div>
       </div>
-      <div id="title">
-        <span><b>COLMAR</b><span>
-        <span>ACADAMY</span>
+      <div class="navigation">
+        <ul>
+          <li>On Campus</li>
+          <li>Online</li>
+          <li>For Companies</li>
+          <li>Sign In</li>
+        </ul>
       </div>
-    </div>
-    <div class="navigation">
-      <ul>
-        <li>On Campus</li>
-        <li>Online</li>
-        <li>For Companies</li>
-        <li>Sign In</li>
-      </ul>
     </div>
   </div>
 
