added logo to menu

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="menu">
       <div class="brand">
         <div id="logo">
-          <img src="" alt="">
+          <img src="./resources/images/logo.png" alt="Not Available">
         </div>
         <div id="title">
-          <span><b>COLMAR</b><span>
+          <span class="strong">COLMAR</span>
           <span>ACADAMY</span>
         </div>
       </div>
