added html for first section of body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
   </head>
 
+  <!-- menu and logo section -->
+
 <body>
   <div class="menu">
     <div class="container">
@@ -26,6 +28,26 @@
           <li>For Companies</li>
           <li>Sign In</li>
         </ul>
+      </div>
+    </div>
+  </div>
+<!-- first section of body -->
+
+  <div class="everyday">
+    <div class="container">
+      <div class="everyday-pic">
+        <img src="./resources/images/banner.jpg" alt="">
+      </div>
+      <div class="everyday-des">
+        <div class="one">
+          <span>Learn something new everyday</span>
+        </div>
+        <div class="two">
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+        </div>
+        <div class="three">
+          <span>Start here</span>
+        </div>
       </div>
     </div>
   </div>
