updated first section html to simplify, still need to get image to fit in div

--- a/index.html
+++ b/index.html
@@ -32,24 +32,19 @@
     </div>
   </div>
 <!-- first section of body -->
-
-  <div class="everyday">
-    <div class="container">
-      <div class="everyday-pic">
-        <img src="./resources/images/banner.jpg" alt="">
-      </div>
-      <div class="everyday-des">
-        <div class="one">
-          <span>Learn something new everyday</span>
-        </div>
-        <div class="two">
-          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-        </div>
-        <div class="three">
-          <span>Start here</span>
-        </div>
-      </div>
+<div class="main-content">
+  <div class="first-section">
+    <div class="banner">
+      <img src="./resources/images/banner.jpg" alt="Not Available">
+    </div>
+    <div class="description">
+      <span class="1">Learn something new evreryday</span>
+      <span class="2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+      <span class="3">Start Here</span>
     </div>
   </div>
+</div>
+
+
 
 </body>
