started styling on banner section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <img src="./resources/images/banner.jpg" alt="Not Available">
     </div>
     <div class="description">
-      <span class="1">Learn something new evreryday</span>
-      <span class="2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-      <span class="3">Start Here</span>
+      <span class="one">Learn something new evreryday</span>
+      <span class="two">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+      <span class="three">Start Here</span>
     </div>
   </div>
 </div>
