general updates to first section, working on styling and sizing

--- a/index.html
+++ b/index.html
@@ -31,19 +31,27 @@
       </div>
     </div>
   </div>
+
 <!-- first section of body -->
+
 <div class="main-content">
   <div class="first-section">
     <div class="banner">
-      <img src="./resources/images/banner.jpg" alt="Not Available">
+      <div class="banner-img">
+        <img src="./resources/images/banner.jpg" alt="Not Available">
+      </div>
     </div>
     <div class="description">
-      <span class="one">Learn something new evreryday</span>
-      <span class="two">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-      <span class="three">Start Here</span>
+      <div class="span-container">
+        <span class="one">Learn something new evreryday</span>
+        <span class="two">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+        <span class="three">Start Here</span>
+      </div>
     </div>
   </div>
 </div>
+
+<!-- second section of body -->
 
 
 
