added initial html for second section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
 
 <!-- second section of body -->
 
+<div class="second-section">
+  <div class="practice">
+    <div class="practice-img">
+    </div>
+    <div class="practice-bold">
+    </div>
+    <div class="practice-par">
+    </div>
+    <div class="practice-footer">
+    </div>
+  </div>
+  <div class="orientation-wrapper">
+    <div class="orientation">
+      <div class="orient-text">
+    </div>
+    <div class="orientation">
+      <div class="orient-text">
+    </div>
+    <div class="orientation">
+      <div class="orient-text">
+    </div>
+  </div>
+</div>
 
 
 </body>
