--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <div class="second-section">
   <div class="practice">
     <div class="practice-img">
+      <img src="./resources/images/information-main.jpg" alt="Not Available">
     </div>
     <div class="practice-bold">
     </div>
