added html text to first section and styled img

--- a/index2.html
+++ b/index2.html
@@ -40,14 +40,17 @@
 <div class="container">
   <div class="first-section">
     <div class="img">
-      <img src="" alt="">
+      <img src="./resources/images/banner.jpg" alt="Not Available">
     </div>
     <div class="fs-info">
       <div class="everyday">
+        <span>Learn something new everyday</span>
       </div>
       <div class="lorem">
+        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
       </div>
       <div class="start">
+        <span>Start Here</span>
       </div>
     </div>
   </div>
