--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
   <div class="header">
     <div class="logo-name">
       <div class="logo">
-        <img src="./resources/images/logo.png" alt="">
+        <img src="./resources/images/logo.png" alt="Not Available">
       </div>
       <div class="colmar">
         <span>COLMAR</span>
@@ -63,49 +63,66 @@
   <div class="second-section">
     <div class="ss-column1">
       <div class="img">
+        <img src="./resources/images/information-main.jpg" alt="Not Available">
       </div>
       <div class="hurt">
+        <span>It doesn't hurt to keep practicing</span>
       </div>
       <div class="curabitur">
+        <span>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
+          lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex.
+          Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</span>
       </div>
       <div class="emmanuel">
+        <span>Emanuel, Sr. Strategist at Hiring.com</span>
       </div>
     </div>
     <div class="ss-column2">
       <div class="minic2-wrapper">
         <div class="img">
-          <img src="" alt="">
+          <img src="./resources/images/information-orientation.jpg" alt="Not Available">
         </div>
         <div class="mc2w">
           <div class="title">
+            <span>Orientation date</span>
           </div>
           <div class="info">
+            <span>Tue 10/11 & 10/12: 8am-3pm
           </div>
           <div class="read-more">
+            <span>Read more</span>
           </div>
         </div>
+      </div>
       <div class="minic2-wrapper">
         <div class="img">
-          <img src="" alt="">
+          <img src="./resources/images/information-campus.jpg" alt="Not Available">
         </div>
         <div class="mc2w">
           <div class="title">
+            <span> Our Campus</span>
           </div>
           <div class="info">
+            <span>Find which campus is close by you</span>
           </div>
           <div class="read-more">
+            <span>Read more</span>
           </div>
         </div>
+      </div>
       <div class="minic2-wrapper">
         <div class="img">
-          <img src="" alt="">
+          <img src="./resources/images/information-guest-lecture.jpg" alt="Not Available">
         </div>
         <div class="mc2w">
           <div class="title">
+            <span>Our guest lecture</span>
           </div>
           <div class="info">
+            <span>Join a keynote with Oliver Sack about music in medical treatment</span>
           </div>
           <div class="read-more">
+            <span>Read more</span>
           </div>
         </div>
       </div>
