--- a/index2.html
+++ b/index2.html
@@ -110,19 +110,21 @@
           </div>
         </div>
       </div>
-      <div class="minic2-wrapper">
-        <div class="img">
-          <img src="./resources/images/information-guest-lecture.jpg" alt="Not Available">
-        </div>
-        <div class="mc2w">
-          <div class="title">
-            <span>Our guest lecture</span>
+      <div class="minic2-wrapper2">
+        <div class="minic2-wrapper">
+          <div class="img">
+            <img src="./resources/images/information-guest-lecture.jpg" alt="Not Available">
           </div>
-          <div class="info">
-            <span>Join a keynote with Oliver Sack about music in medical treatment</span>
-          </div>
-          <div class="read-more">
-            <span>Read more</span>
+          <div class="mc2w">
+            <div class="title">
+              <span>Our guest lecture</span>
+            </div>
+            <div class="info">
+              <span>Join a keynote with Oliver Sack about music in medical treatment</span>
+            </div>
+            <div class="read-more">
+              <span>Read more</span>
+            </div>
           </div>
         </div>
       </div>
