--- a/index2.html
+++ b/index2.html
@@ -136,75 +136,81 @@
 
 <div class="container">
   <div class="header">
-    <span></span>
+    <span>Start Learning</span>
   </div>
   <div class="row-one">
     <div class="mini-rappers3">
       <div class="img">
-        <img src="" alt="">
+        <img src="./resources/images/course-software.jpg" alt="Not Available">
       <div>
       <div class="title">
+        <span>Software engineering</span>
       </div>
       <div class="info">
-        <span></span>
-        <span></span>
+        <span>COURSES</span>
+        <span>Web Development,Mobile Development,iOT,API's</span>
       </div>
     <div>
     <div class="mini-rappers3">
       <div class="img">
-        <img src="" alt="">
+        <img src="./resources/images/course-computer-art.jpg" alt="Image Not Available">
       <div>
       <div class="title">
+        <span>Computer art</span>
       </div>
       <div class="info">
-        <span></span>
-        <span></span>
+        <span>COURSES</span>
+        <span>Imaging & Design,Web Design,Motion Graphics & Visual Effects,Computer Animation</span>
       </div>
     <div>
     <div class="mini-rappers3">
       <div class="img">
-        <img src="" alt="">
+        <img src="./resources/images/course-design.jpg" alt="Image Not Available">
       <div>
       <div class="title">
+        <span>Design</span>
       </div>
       <div class="info">
-        <span></span>
-        <span></span>
+        <span>COURSES</span>
+        <span>User Experience Design,User Research, Visual Design</span>
       </div>
     <div>
   </div>
   <div class="row-two">
     <div class="mini-rappers3">
       <div class="img">
-        <img src="" alt="">
+        <img src="./resources/images/course-data.jpg" alt="Image Not Available">
       <div>
       <div class="title">
+        <span>Data</span>
       </div>
       <div class="info">
-        <span></span>
-        <span></span>
+        <span>COURSES</span>
+        <span>Data Science,Big Data,SQL,Data Visualization</span>
       </div>
     </div>
       <div class="mini-rappers3">
         <div class="img">
-          <img src="" alt="">
+          <img src="./resources/images/course-business.jpg" alt="Image Not Available">
         <div>
         <div class="title">
+          <span>Business</span>
         </div>
         <div class="info">
-          <span></span>
-          <span></span>
+          <span>COURSES</span>
+          <span>Product Development,Business Development,Startup</span>
         </div>
       </div>
       <div class="mini-rappers3">
         <div class="img">
-          <img src="" alt="">
+          <img src="./resources/images/course-marketing.jpg" alt="Image Not Available">
         <div>
         <div class="title">
+          <span>Marketing</span>
         </div>
         <div class="info">
-          <span></span>
-          <span></span>
+          <span>COURSES</span>
+          <span>Analytics,Content Marketing,Mobile Marketing</span>
         </div>
       </div>
     <div>
