working on flexing section 3 first row

--- a/index2.html
+++ b/index2.html
@@ -135,61 +135,73 @@
 <!-- third section -->
 
 <div class="container">
-  <div class="header">
-    <span>Start Learning</span>
+  <div class="third-section">
+    <div class="header">
+      <span>Start Learning</span>
+    </div>
   </div>
-  <div class="row-one">
-    <div class="mini-rappers3">
-      <div class="img">
-        <img src="./resources/images/course-software.jpg" alt="Not Available">
-      <div>
-      <div class="title">
-        <span>Software engineering</span>
+</div>
+
+
+<div class="container">
+  <div class="third-section">
+    <div class="row-one">
+      <div class="mini-wrappers3">
+        <div class="img">
+          <img src="./resources/images/course-software.jpg" alt="Not Available">
+        </div>
+        <div class="title">
+          <span>Software engineering</span>
+        </div>
+        <div class="info">
+          <span>COURSES</span>
+          <span>Web Development,Mobile Development,iOT,API's</span>
+        </div>
       </div>
-      <div class="info">
-        <span>COURSES</span>
-        <span>Web Development,Mobile Development,iOT,API's</span>
+      <div class="mini-wrappers3">
+        <div class="img">
+          <img src="./resources/images/course-computer-art.jpg" alt="Image Not Available">
+        </div>
+        <div class="title">
+          <span>Computer art</span>
+        </div>
+        <div class="info">
+          <span>COURSES</span>
+          <span>Imaging & Design,Web Design,Motion Graphics & Visual Effects,Computer Animation</span>
+        </div>
       </div>
-    <div>
-    <div class="mini-rappers3">
-      <div class="img">
-        <img src="./resources/images/course-computer-art.jpg" alt="Image Not Available">
-      <div>
-      <div class="title">
-        <span>Computer art</span>
-      </div>
-      <div class="info">
-        <span>COURSES</span>
-        <span>Imaging & Design,Web Design,Motion Graphics & Visual Effects,Computer Animation</span>
-      </div>
-    <div>
-    <div class="mini-rappers3">
-      <div class="img">
-        <img src="./resources/images/course-design.jpg" alt="Image Not Available">
-      <div>
-      <div class="title">
-        <span>Design</span>
-      </div>
-      <div class="info">
-        <span>COURSES</span>
-        <span>User Experience Design,User Research, Visual Design</span>
-      </div>
-    <div>
-  </div>
-  <div class="row-two">
-    <div class="mini-rappers3">
-      <div class="img">
-        <img src="./resources/images/course-data.jpg" alt="Image Not Available">
-      <div>
-      <div class="title">
-        <span>Data</span>
-      </div>
-      <div class="info">
-        <span>COURSES</span>
-        <span>Data Science,Big Data,SQL,Data Visualization</span>
+      <div class="mini-wrappers3">
+        <div class="img">
+          <img src="./resources/images/course-design.jpg" alt="Image Not Available">
+        </div>
+        <div class="title">
+          <span>Design</span>
+        </div>
+        <div class="info">
+          <span>COURSES</span>
+          <span>User Experience Design,User Research, Visual Design</span>
+        </div>
       </div>
     </div>
-      <div class="mini-rappers3">
+  </div>
+</div>
+
+<div class="container">
+  <div class="third-section">
+    <div class="row-two">
+      <div class="mini-wrappers3">
+        <div class="img">
+          <img src="./resources/images/course-data.jpg" alt="Image Not Available">
+        <div>
+        <div class="title">
+          <span>Data</span>
+        </div>
+        <div class="info">
+          <span>COURSES</span>
+          <span>Data Science,Big Data,SQL,Data Visualization</span>
+        </div>
+      </div>
+      <div class="mini-wrappers3">
         <div class="img">
           <img src="./resources/images/course-business.jpg" alt="Image Not Available">
         <div>
@@ -201,7 +213,7 @@
           <span>Product Development,Business Development,Startup</span>
         </div>
       </div>
-      <div class="mini-rappers3">
+      <div class="mini-wrappers3">
         <div class="img">
           <img src="./resources/images/course-marketing.jpg" alt="Image Not Available">
         <div>
@@ -213,6 +225,6 @@
           <span>Analytics,Content Marketing,Mobile Marketing</span>
         </div>
       </div>
-    <div>
+    </div>
   </div>
 </div>
