started fourth-section added html header

--- a/index2.html
+++ b/index2.html
@@ -142,6 +142,7 @@
   </div>
 </div>
 
+<!-- third section- row-one -->
 
 <div class="container">
   <div class="third-section">
@@ -186,13 +187,15 @@
   </div>
 </div>
 
+<!-- third section- row-two -->
+
 <div class="container">
   <div class="third-section">
     <div class="row-two">
       <div class="mini-wrappers3">
         <div class="img">
           <img src="./resources/images/course-data.jpg" alt="Image Not Available">
-        <div>
+        </div>
         <div class="title">
           <span>Data</span>
         </div>
@@ -201,30 +204,42 @@
           <span>Data Science,Big Data,SQL,Data Visualization</span>
         </div>
       </div>
-      <div class="mini-wrappers3">
-        <div class="img">
-          <img src="./resources/images/course-business.jpg" alt="Image Not Available">
-        <div>
-        <div class="title">
-          <span>Business</span>
-        </div>
-        <div class="info">
-          <span>COURSES</span>
-          <span>Product Development,Business Development,Startup</span>
-        </div>
+    <div class="mini-wrappers3">
+      <div class="img">
+        <img src="./resources/images/course-business.jpg" alt="Image Not Available">
       </div>
-      <div class="mini-wrappers3">
-        <div class="img">
-          <img src="./resources/images/course-marketing.jpg" alt="Image Not Available">
-        <div>
-        <div class="title">
-          <span>Marketing</span>
-        </div>
-        <div class="info">
-          <span>COURSES</span>
-          <span>Analytics,Content Marketing,Mobile Marketing</span>
-        </div>
+      <div class="title">
+        <span>Business</span>
+      </div>
+      <div class="info">
+        <span>COURSES</span>
+        <span>Product Development,Business Development,Startup</span>
+      </div>
+    </div>
+    <div class="mini-wrappers3">
+      <div class="img">
+        <img src="./resources/images/course-marketing.jpg" alt="Image Not Available">
+      <div>
+      <div class="title">
+        <span>Marketing</span>
+      </div>
+      <div class="info">
+        <span>COURSES</span>
+        <span>Analytics,Content Marketing,Mobile Marketing</span>
       </div>
     </div>
   </div>
 </div>
+</div>
+
+<!-- fourth section- -->
+
+<div class="container">
+  <div class="fourth-section">
+    <div class="header">
+      <span>Thesis exhibit</span>
+    </div>
+  </div>
+</div>
+
+<!-- fourth section - header -->
