continued section 4 - flexed column1 and 2

--- a/index2.html
+++ b/index2.html
@@ -155,7 +155,7 @@
           <span>Software engineering</span>
         </div>
         <div class="info">
-          <span>COURSES</span>
+          <span>COURSES<br></span>
           <span>Web Development,Mobile Development,iOT,API's</span>
         </div>
       </div>
@@ -167,7 +167,7 @@
           <span>Computer art</span>
         </div>
         <div class="info">
-          <span>COURSES</span>
+          <span>COURSES<br></span>
           <span>Imaging & Design,Web Design,Motion Graphics & Visual Effects,Computer Animation</span>
         </div>
       </div>
@@ -179,7 +179,7 @@
           <span>Design</span>
         </div>
         <div class="info">
-          <span>COURSES</span>
+          <span>COURSES<br></span>
           <span>User Experience Design,User Research, Visual Design</span>
         </div>
       </div>
@@ -200,7 +200,7 @@
           <span>Data</span>
         </div>
         <div class="info">
-          <span>COURSES</span>
+          <span>COURSES<br></span>
           <span>Data Science,Big Data,SQL,Data Visualization</span>
         </div>
       </div>
@@ -212,7 +212,7 @@
         <span>Business</span>
       </div>
       <div class="info">
-        <span>COURSES</span>
+        <span>COURSES<br></span>
         <span>Product Development,Business Development,Startup</span>
       </div>
     </div>
@@ -224,7 +224,7 @@
         <span>Marketing</span>
       </div>
       <div class="info">
-        <span>COURSES</span>
+        <span>COURSES<br></span>
         <span>Analytics,Content Marketing,Mobile Marketing</span>
       </div>
     </div>
@@ -234,6 +234,7 @@
 
 <!-- fourth section- -->
 
+<!-- fourth section - header -->
 <div class="container">
   <div class="fourth-section">
     <div class="header">
@@ -242,4 +243,49 @@
   </div>
 </div>
 
-<!-- fourth section - header -->
+<!-- fourth section - column1 -->
+
+<div class="container">
+  <div class="fourth-section">
+    <div class="column-one">
+      <div class="video">
+      </div>
+      <div class="title">
+        <span>Reimagine urban</span>
+      </div>
+      <div class="curabitur">
+        <span>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
+          lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex.
+          Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</span>
+      </div>
+    </div>
+    <div class="column-two">
+      <div class="minic2-wrapper">
+        <div class="img">
+          <img src="./resources/images/information-campus.jpg" alt="Not Available">
+        </div>
+        <div class="mc2w">
+          <div class="title">
+            <span> Our Campus</span>
+          </div>
+          <div class="info">
+            <span>Find which campus is close by you</span>
+          </div>
+        </div>
+      </div>
+      <div class="minic2-wrapper">
+        <div class="img">
+          <img src="./resources/images/information-campus.jpg" alt="Not Available">
+        </div>
+        <div class="mc2w">
+          <div class="title">
+            <span> Our Campus</span>
+          </div>
+          <div class="info">
+            <span>Find which campus is close by you</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
