added html text, imgs, vids, and flexed section 4

--- a/index2.html
+++ b/index2.html
@@ -249,6 +249,11 @@
   <div class="fourth-section">
     <div class="column-one">
       <div class="video">
+        <video width="60%" height="auto" controls>
+          <source src="./resources/videos/thesis.mp4" type="video/mp4">
+          <source src="movie.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+        </video>
       </div>
       <div class="title">
         <span>Reimagine urban</span>
@@ -260,7 +265,7 @@
       </div>
     </div>
     <div class="column-two">
-      <div class="minic2-wrapper">
+      <div class="minic2-wrapper-grey">
         <div class="img">
           <img src="./resources/images/information-campus.jpg" alt="Not Available">
         </div>
@@ -273,7 +278,7 @@
           </div>
         </div>
       </div>
-      <div class="minic2-wrapper">
+      <div class="minic2-wrapper-white">
         <div class="img">
           <img src="./resources/images/information-campus.jpg" alt="Not Available">
         </div>
