adjusted header for main and section 3

--- a/index2.html
+++ b/index2.html
@@ -136,7 +136,7 @@
 
 <div class="container">
   <div class="third-section">
-    <div class="header">
+    <div class="header2">
       <span>Start Learning</span>
     </div>
   </div>
