--- a/index2.html
+++ b/index2.html
@@ -307,3 +307,17 @@
     </div>
   </div>
 </div>
+
+<!-- Footer  -->
+
+
+<footer>&copy; Copyright 2018 HTML.am</footer>
+
+<div class="footer">
+  <div class="fimage">
+    <img src="" alt="Not available ">
+  </div>
+  <div class="rights">
+    <span>2016 Colmar Academy. All rights reserved
+  </div>
+</div>
