updated section 4 with pics and text for column2

--- a/index2.html
+++ b/index2.html
@@ -277,30 +277,33 @@
           Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</span>
       </div>
     </div>
+
+    <!-- fourth section - column2 -->
+
     <div class="column-two">
       <div class="minic2-wrapper-grey">
         <div class="img">
-          <img src="./resources/images/information-campus.jpg" alt="Not Available">
+          <img src="./resources/images/thesis-fisma.jpg" alt="Not Available">
         </div>
         <div class="mc2w">
           <div class="title">
-            <span> Our Campus</span>
+            <span> Fisma: Design and Prototype</span>
           </div>
           <div class="info">
-            <span>Find which campus is close by you</span>
+            <span>Designer showcase of new prototype product</span>
           </div>
         </div>
       </div>
       <div class="minic2-wrapper-white">
         <div class="img">
-          <img src="./resources/images/information-campus.jpg" alt="Not Available">
+          <img src="./resources/images/thesis-now-and-then.jpg" alt="Not Available">
         </div>
         <div class="mc2w">
           <div class="title">
-            <span> Our Campus</span>
+            <span>Now and then</span>
           </div>
           <div class="info">
-            <span>Find which campus is close by you</span>
+            <span>Research study about New York</span>
           </div>
         </div>
       </div>
@@ -309,15 +312,4 @@
 </div>
 
 <!-- Footer  -->
-
-
-<footer>&copy; Copyright 2018 HTML.am</footer>
-
-<div class="footer">
-  <div class="fimage">
-    <img src="" alt="Not available ">
-  </div>
-  <div class="rights">
-    <span>2016 Colmar Academy. All rights reserved
-  </div>
-</div>
+<footer>&copy; 2016 Colmar Academy. All rights reserved</footer>
