--- a/index2.html
+++ b/index2.html
@@ -250,7 +250,7 @@
 <!-- fourth section - header -->
 <div class="container">
   <div class="fourth-section">
-    <div class="header">
+    <div class="header3">
       <span>Thesis exhibit</span>
     </div>
   </div>
