added colors to section 3

--- a/index2.html
+++ b/index2.html
@@ -153,11 +153,13 @@
         </div>
         <div class="ti">
           <div class="title">
-            <span>Software engineering</span>
+            Software engineering
+          </div>
+          <div class="courses">
+            COURSES
           </div>
           <div class="info">
-            <span>COURSES<br></span>
-            <span>Web Development,Mobile Development,iOT,API's</span>
+            Web Development,Mobile Development,iOT,API's
           </div>
         </div>
       </div>
@@ -169,8 +171,10 @@
           <div class="title">
             <span>Computer art</span>
           </div>
+          <div class="courses">
+            <span>COURSES</span>
+          </div>
           <div class="info">
-            <span>COURSES<br></span>
             <span>Imaging & Design,Web Design,Motion Graphics & Visual Effects,Computer Animation</span>
           </div>
         </div>
@@ -183,8 +187,10 @@
           <div class="title">
             <span>Design</span>
           </div>
+          <div class="courses">
+            <span>COURSES</span>
+          </div>
           <div class="info">
-            <span>COURSES<br></span>
             <span>User Experience Design,User Research, Visual Design</span>
           </div>
         </div>
@@ -206,8 +212,10 @@
           <div class="title">
             <span>Data</span>
           </div>
+          <div class="courses">
+            <span>COURSES</span>
+          </div>
           <div class="info">
-            <span>COURSES<br></span>
             <span>Data Science,Big Data,SQL,Data Visualization</span>
           </div>
         </div>
@@ -220,8 +228,10 @@
           <div class="title">
             <span>Business</span>
           </div>
+          <div class="courses">
+            <span>COURSES</span>
+          </div>
           <div class="info">
-            <span>COURSES<br></span>
             <span>Product Development,Business Development,Startup</span>
           </div>
         </div>
@@ -234,8 +244,10 @@
           <div class="title">
             <span>Marketing</span>
           </div>
+          <div class="courses">
+            <span>COURSES</span>
+          </div>
           <div class="info">
-            <span>COURSES<br></span>
             <span>Analytics,Content Marketing,Mobile Marketing</span>
           </div>
         </div>
