added color, text, and margin to footer

--- a/index2.html
+++ b/index2.html
@@ -301,4 +301,11 @@
   </div>
 
 <!-- Footer  -->
-<footer>&copy; 2016 Colmar Academy. All rights reserved</footer>
+<footer>
+  <div class="copyright">
+    &copy; 2016 Colmar Academy. All rights reserved
+  </div>
+  <div class="terms">
+    <span>Terms</span>
+    <span>Privacy</span>
+</footer>
