added top padding to navigation to center li's

--- a/index2.html
+++ b/index2.html
@@ -151,7 +151,7 @@
             COURSES
           </div>
           <div class="info">
-            Web Development,Mobile Development,iOT,API's
+            <span>Web Development,Mobile Development,iOT,API's</span>
           </div>
         </div>
       </div>
