updated section two column 2 to remove double bottom border

--- a/index2.html
+++ b/index2.html
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div class="ss-column2">
-      <div class="minic2-wrapper">
+      <div class="minic2-wrapper-double">
         <div class="img">
           <img src="./resources/images/information-orientation.jpg" alt="Not Available">
         </div>
