added mobile html div for header

--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,6 @@
 
 <!-- Header Navigation and Company Name/Logo -->
 
-
   <div class="header">
     <div class="logo-name">
       <div class="logo">
@@ -32,8 +31,14 @@
         <li>Sign in</li>
       </ul>
     </div>
+    <div class="mobile-header">
+      <img src="" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
+    </div>
   </div>
-
+</div>
 
 <!-- first section -->
 
@@ -53,7 +58,6 @@
       </div>
     </div>
   </div>
-
 
   <!-- second section -->
 
@@ -128,7 +132,6 @@
     </div>
   </div>
 
-
 <!-- third section -->
 
   <div class="header2">
@@ -136,7 +139,6 @@
   </div>
 
 <!-- third section- row-one -->
-
 
     <div class="third-section">
       <div class="mini-wrappers3">
@@ -301,6 +303,7 @@
   </div>
 
 <!-- Footer  -->
+
 <footer>
   <div class="copyright">
     &copy; 2016 Colmar Academy. All rights reserved
