added responsive header html and css, saved responsive header images to png

--- a/index2.html
+++ b/index2.html
@@ -31,13 +31,16 @@
         <li>Sign in</li>
       </ul>
     </div>
-    <div class="mobile-header">
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
-    </div>
   </div>
+</div>
+
+<!-- Mobile Header -->
+
+<div class="mobile-header">
+  <img src="./resources/images/logo.png" alt="Not Available">
+  <img src="./resources/images/Campus.png" alt="Not Available">
+  <img src="./resources/images/online.png" alt="Not Available">
+  <img src="./resources/images/login.png" alt="Not Available">
 </div>
 
 <!-- first section -->
