added mobile responsiveness to second section

--- a/index2.html
+++ b/index2.html
@@ -86,6 +86,9 @@
         <div class="img">
           <img src="./resources/images/information-orientation.jpg" alt="Not Available">
         </div>
+        <div class="mobile-img">
+          <img src="./resources/images/information-orientation-mobile.jpg" alt="Not Available">
+        </div>
         <div class="mc2w">
           <div class="title">
             <span>Orientation date</span>
@@ -101,6 +104,9 @@
       <div class="minic2-wrapper">
         <div class="img">
           <img src="./resources/images/information-campus.jpg" alt="Not Available">
+        </div>
+        <div class="mobile-img">
+          <img src="./resources/images/information-campus-mobile.jpg" alt="Not Available">
         </div>
         <div class="mc2w">
           <div class="title">
@@ -118,6 +124,9 @@
         <div class="minic2-wrapper">
           <div class="img">
             <img src="./resources/images/information-guest-lecture.jpg" alt="Not Available">
+          </div>
+          <div class="mobile-img">
+            <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="Not Available">
           </div>
           <div class="mc2w">
             <div class="title">
