additional minor adjustments to section four including border add

--- a/index2.html
+++ b/index2.html
@@ -257,7 +257,7 @@
 <!-- fourth section - header -->
   <div class="fourth-section">
     <div class="header3">
-      <span>Thesis exhibit</span>
+      Thesis exhibit
     </div>
   </div>
 
