minor adjustments to fourth section mobile, display none on curabitor div element

--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 </html>
 
 <!-- Header Navigation and Company Name/Logo -->
-
+<body>
   <div class="header">
     <div class="logo-name">
       <div class="logo">
@@ -32,18 +32,18 @@
       </ul>
     </div>
   </div>
-</div>
 
-<!-- Mobile Header -->
 
-<div class="mobile-header">
-  <img src="./resources/images/logo.png" alt="Not Available">
-  <img src="./resources/images/Campus.png" alt="Not Available">
-  <img src="./resources/images/online.png" alt="Not Available">
-  <img src="./resources/images/login.png" alt="Not Available">
-</div>
+  <!-- Mobile Header -->
 
-<!-- first section -->
+  <div class="mobile-header">
+    <img src="./resources/images/logo.png" alt="Not Available">
+    <img src="./resources/images/Campus.png" alt="Not Available">
+    <img src="./resources/images/online.png" alt="Not Available">
+    <img src="./resources/images/login.png" alt="Not Available">
+  </div>
+
+  <!-- first section -->
 
   <div class="first-section">
     <div class="img">
@@ -62,8 +62,7 @@
     </div>
   </div>
 
-  <!-- second section -->
-
+    <!-- second section -->
   <div class="second-section">
     <div class="ss-column1">
       <div class="img">
@@ -74,8 +73,8 @@
       </div>
       <div class="curabitur">
         <span>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
-          lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex.
-          Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</span>
+            lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex.
+            Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</span>
       </div>
       <div class="emmanuel">
         <span>Emanuel, Sr. Strategist at Hiring.com</span>
@@ -94,7 +93,7 @@
             <span>Orientation date</span>
           </div>
           <div class="info">
-            <span>Tue 10/11 & 10/12: 8am-3pm
+            <span>Tue 10/11 & 10/12: 8am-3pm</span>
           </div>
           <div class="read-more">
             <span>Read more</span>
@@ -144,125 +143,118 @@
     </div>
   </div>
 
-<!-- third section -->
-
+  <!-- third section -->
   <div class="header2">
     <span>Start Learning</span>
   </div>
 
-<!-- third section- row-one -->
+  <!-- third section- row-one -->
 
-    <div class="third-section">
-      <div class="mini-wrappers3">
-        <div class="img">
-          <img src="./resources/images/course-software.jpg" alt="Not Available">
+  <div class="third-section">
+    <div class="mini-wrappers3">
+      <div class="img">
+        <img src="./resources/images/course-software.jpg" alt="Not Available">
+      </div>
+      <div class="ti">
+        <div class="title">
+          Software engineering
         </div>
-        <div class="ti">
-          <div class="title">
-            Software engineering
-          </div>
-          <div class="courses">
-            COURSES
-          </div>
-          <div class="info">
-            <span>Web Development,Mobile Development,iOT,API's</span>
-          </div>
+        <div class="courses">
+          COURSES
+        </div>
+        <div class="info">
+          <span>Web Development,Mobile Development,iOT,API's</span>
         </div>
       </div>
-      <div class="mini-wrappers3">
-        <div class="img">
-          <img src="./resources/images/course-computer-art.jpg" alt="Image Not Available">
+    </div>
+    <div class="mini-wrappers3">
+      <div class="img">
+        <img src="./resources/images/course-computer-art.jpg" alt="Image Not Available">
+      </div>
+      <div class="ti">
+        <div class="title">
+          <span>Computer art</span>
         </div>
-        <div class="ti">
-          <div class="title">
-            <span>Computer art</span>
-          </div>
-          <div class="courses">
-            <span>COURSES</span>
-          </div>
-          <div class="info">
-            <span>Imaging & Design,Web Design,Motion Graphics & Visual Effects,Computer Animation</span>
-          </div>
+        <div class="courses">
+          <span>COURSES</span>
+        </div>
+        <div class="info">
+          <span>Imaging & Design,Web Design,Motion Graphics & Visual Effects,Computer Animation</span>
         </div>
       </div>
-      <div class="mini-wrappers3">
-        <div class="img">
-          <img src="./resources/images/course-design.jpg" alt="Image Not Available">
+    </div>
+    <div class="mini-wrappers3">
+      <div class="img">
+        <img src="./resources/images/course-design.jpg" alt="Image Not Available">
+      </div>
+      <div class="ti">
+        <div class="title">
+          <span>Design</span>
         </div>
-        <div class="ti">
-          <div class="title">
-            <span>Design</span>
-          </div>
-          <div class="courses">
-            <span>COURSES</span>
-          </div>
-          <div class="info">
-            <span>User Experience Design,User Research, Visual Design</span>
-          </div>
+        <div class="courses">
+          <span>COURSES</span>
+        </div>
+        <div class="info">
+          <span>User Experience Design,User Research, Visual Design</span>
         </div>
       </div>
-      <div class="mini-wrappers3">
-        <div class="img">
-          <img src="./resources/images/course-data.jpg" alt="Image Not Available">
+    </div>
+    <div class="mini-wrappers3">
+      <div class="img">
+        <img src="./resources/images/course-data.jpg" alt="Image Not Available">
+      </div>
+      <div class="ti">
+        <div class="title">
+          <span>Data</span>
         </div>
-        <div class="ti">
-          <div class="title">
-            <span>Data</span>
-          </div>
-          <div class="courses">
-            <span>COURSES</span>
-          </div>
-          <div class="info">
-            <span>Data Science,Big Data,SQL,Data Visualization</span>
-          </div>
+        <div class="courses">
+          <span>COURSES</span>
+        </div>
+        <div class="info">
+          <span>Data Science,Big Data,SQL,Data Visualization</span>
         </div>
       </div>
-      <div class="mini-wrappers3">
-        <div class="img">
-          <img src="./resources/images/course-business.jpg" alt="Image Not Available">
+    </div>
+    <div class="mini-wrappers3">
+      <div class="img">
+        <img src="./resources/images/course-business.jpg" alt="Image Not Available">
+      </div>
+      <div class="ti">
+        <div class="title">
+          <span>Business</span>
         </div>
-        <div class="ti">
-          <div class="title">
-            <span>Business</span>
-          </div>
-          <div class="courses">
-            <span>COURSES</span>
-          </div>
-          <div class="info">
-            <span>Product Development,Business Development,Startup</span>
-          </div>
+        <div class="courses">
+          <span>COURSES</span>
+        </div>
+        <div class="info">
+          <span>Product Development,Business Development,Startup</span>
         </div>
       </div>
-      <div class="mini-wrappers3">
-        <div class="img">
-          <img src="./resources/images/course-marketing.jpg" alt="Image Not Available">
+    </div>
+    <div class="mini-wrappers3">
+      <div class="img">
+        <img src="./resources/images/course-marketing.jpg" alt="Image Not Available">
+      </div>
+      <div class="ti">
+        <div class="title">
+          <span>Marketing</span>
         </div>
-        <div class="ti">
-          <div class="title">
-            <span>Marketing</span>
-          </div>
-          <div class="courses">
-            <span>COURSES</span>
-          </div>
-          <div class="info">
-            <span>Analytics,Content Marketing,Mobile Marketing</span>
-          </div>
+        <div class="courses">
+          <span>COURSES</span>
+        </div>
+        <div class="info">
+          <span>Analytics,Content Marketing,Mobile Marketing</span>
         </div>
       </div>
     </div>
   </div>
 
-<!-- fourth section- -->
 
-<!-- fourth section - header -->
-
-  <div class="fourth-section">
-    <div class="header3">
+  <!-- fourth section- -->
+  <div class="header3">
       Thesis exhibit
-    </div>
   </div>
-
-<!-- fourth section - column1 -->
+  <!-- fourth section - column1 -->
 
   <div class="fourth-section">
     <div class="column-one">
@@ -278,12 +270,12 @@
       </div>
       <div class="curabitur">
         <span>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
-          lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex.
-          Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</span>
+            lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex.
+            Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</span>
       </div>
     </div>
 
-    <!-- fourth section - column2 -->
+      <!-- fourth section - column2 -->
 
     <div class="column-two">
       <div class="minic2-wrapper-grey">
@@ -315,13 +307,15 @@
     </div>
   </div>
 
-<!-- Footer  -->
+  <!-- Footer  -->
 
-<footer>
-  <div class="copyright">
-    &copy; 2016 Colmar Academy. All rights reserved
-  </div>
-  <div class="terms">
-    <span>Terms</span>
-    <span>Privacy</span>
-</footer>
+  <footer>
+    <div class="copyright">
+      <span>&copy; 2016 Colmar Academy. All rights reserved</span>
+    </div>
+    <div class="terms">
+      <span>Terms</span>
+      <span>Privacy</span>
+    </div>
+  </footer>
+</body>
