--- a/index2.html
+++ b/index2.html
@@ -259,7 +259,7 @@
   <div class="fourth-section">
     <div class="column-one">
       <div class="video">
-        <video width="60%" height="auto" controls>
+        <video controls poster="/images/w3html5.gif" width="60%" height="auto" controls>
           <source src="./resources/videos/thesis.mp4" type="video/mp4">
           <source src="movie.ogg" type="video/ogg">
             Your browser does not support the video tag.
